# rust-base-pkg

./: README.md
src/: Cargo.toml
src/app/: README.md
src/app-kernel/: Cargo.toml  README.md  build.rs  cbindgen.toml
src/app-kernel/benches/: bench_app.rs
src/app-kernel/doc/: app-kernel_App.md  cmd-help.txt
src/app-kernel/examples/: app-kernel-async-example.rs  app-kernel-example.c  app-kernel-example.rs  app-kernel-modules-example.rs
src/app-kernel/src/: app.rs  app_c.rs  app_config.rs  app_event.rs  app_hook.rs  app_module.rs  app_module_meta.rs  bindings_c.rs  bindings_gen.rs  bindings_gen.rs.new  lib.rs  macros.rs  pid_file.rs  prelude.rs
src/app-kernel/src/modules/: async_mod.rs  cmd_mod.rs  config_mod.rs  env_mod.rs  help_mod.rs  ld_mod.rs  log_mod.rs  mod.rs
src/app-kernel/src/modules/async_mod/: async_init.rs  async_runtime.rs  tokio_config.rs
src/app-kernel/src/modules/cmd_mod/: cmd_args_ext.rs  cmd_config.rs
src/app-kernel/src/modules/config_mod/: config_display.rs
src/app-kernel/src/modules/ld_mod/: ld_config.rs  ld_control.rs  ld_meta.rs
src/app-kernel/tests/: test_app.rs  test_async.rs
src/app-kernel/tests/common/: example_async_module.rs  example_module.rs  mod.rs
src/app/crates/b/: Cargo.toml
src/app/crates/b/src/: lib.rs
src/app/doc/: cmd-help.txt
src/app/src/: lib.rs  main_mod.rs
src/crates/a/: Cargo.toml
src/crates/a/src/: lib.rs
src/src/: main_config.rs
