[package]
name    = "app-example-a"
version = "1.0.0"
edition = "2024"

[lints]
workspace = true

[lib]
path       = "src/lib.rs"
name       = "app_a"
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
app-base   = { workspace = true }
app-kernel = { workspace = true }
app-common = { workspace = true }
log        = { workspace = true }
indexmap   = { workspace = true }
console    = { workspace = true }
yansi      = { workspace = true }
serde      = { workspace = true }
tokio      = { workspace = true }
futures    = { workspace = true }
sqlx       = { workspace = true }
libc       = { workspace = true }
libc_alloc = { workspace = true }
libc-print = { workspace = true }

[dev-dependencies]
app-testing = { workspace = true }
